Revert "weird content overflow issue"
This reverts commit 55352a320482213b625b50a5a3a16fcaecd7344b.

--- a/src/css/myStyle.css
+++ b/src/css/myStyle.css
@@ -19,7 +19,7 @@ body {
 .contentContainer {
     color: white;
     background-color: rgb(70, 70, 70);
-    /* height: 100%; */
+    height: 100%;
     max-width: var(--content-container-max-width);
     margin: auto;
     overflow: hidden;
